welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:2: error: not found: value booléan
var x=booléan=false ;
      ^BDRBuggle:4: error: not found: value baissebrosse
	baissebrosse();
        ^BDRBuggle:5: error: not found: value litmessage
	if(litmessage()=="R"){
           ^BDRBuggle:8: error: not found: value litmessage
 }else if(litmessage()=="L"){
          ^BDRBuggle:11: error: not found: value litmessage
 } else if(litmessage()=="I"){
           ^BDRBuggle:14: error: not found: value litmessage
  } else if(litmessage()=="A"){
            ^BDRBuggle:16: error: not found: value litmessage
 }  else if(litmessage()=="B"){
            ^BDRBuggle:19: error: not found: value litmessage
  } else if(litmessage()=="C"){
            ^BDRBuggle:23: error: not found: value litmessage
  } else if(litmessage()=="Z"){
            ^BDRBuggle:25: error: not found: value litmessage
  } else if(litmessage()=="Y"){
            ^BDRBuggle:30: error: not found: value litmessage
  } else if(litmessage()=="X"){
            ^