welcome.lessons.welcome.bdr.BDR.scala.code
var x=booléan=false ;
while(!x=false){
	baissebrosse();
	if(litmessage()=="R"){
		droite();
		avance();
 }else if(litmessage()=="L"){
 	gauche();
 	avance();
 } else if(litmessage()=="I"){
 	retourne();
 	avance();
  } else if(litmessage()=="A"){
  	avance();
 }  else if(litmessage()=="B"){
 	avance();
 	avance();
  } else if(litmessage()=="C"){
  	avance();
  	avance();
  	avance();
  } else if(litmessage()=="Z"){
  	recule();
  } else if(litmessage()=="Y"){
  	recule();
  	recule();
  	recule();
  	
  } else if(litmessage()=="X"){
  	recule();
  	recule();
  	recule();
  }
}
